--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,16 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(picola VERSION 1.0 LANGUAGES CXX)
+project(PicoLA VERSION 1.0 LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
+
+option(ENABLE_TESTING OFF "Unit-testing Mechenism")
+
+if(ENABLE_TESTING)
+  enable_testing()
+  add_subdirectory(tests)
+endif()
 
 add_compile_options(-g -fdiagnostics-color=always)
 
