Add tests related to vec
Create two tests:
  1. Size test
  2. OStream test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,5 +23,6 @@ set(TEST_TARGET ${TEST_BASENAME})
 foreach(target ${TEST_TARGET})
   add_executable(${target} ${target})
   target_link_libraries(${target} GTest::gtest_main)
+  target_include_directories(${target} PUBLIC ${CMAKE_SOURCE_DIR}/include)
   gtest_discover_tests(${target} TEST_LIST test)
 endforeach()
